# tibia-client-editor

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
examples/: config.toml.dist  local.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/: appearances.proto
src-tauri/src/: commands.rs  config_loader.rs  lib.rs
src-tauri/src/appearances/: config.rs  flags.rs  mod.rs
src-tauri/src/edit/: battleye.rs  client_check.rs  config.rs  error.rs  mod.rs  patterns.rs  pe.rs  property.rs  rsa_keys.rs  types.rs  util.rs
src-tauri/src/repack/: mod.rs  types.rs
src-tauri/src/win2mac/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/app/: app-shell.tsx  app-updater.tsx  appearance-items-editor.tsx  appearances-panel.tsx  config-source-banner.tsx  config-url-fields.tsx  config-workspace.tsx  diagnose-panel.tsx  diagnosis-summary.tsx  edit-panel.tsx  file-picker-field.tsx  item-preview.tsx  log-viewer.tsx  panel-page.tsx  repack-panel.tsx  theme-toggle.tsx  win2mac-panel.tsx
src/components/providers/: theme-provider.tsx
src/hooks/: use-config-store.ts
src/lib/: item-preview.ts  models.types.ts
src/lib/config/: appearance-flags.types.ts  config-presets.ts  config-toml.ts  config.types.ts
src/lib/store/: config-store.ts
src/lib/tauri/: commands.ts  environment.ts
