[package]
name = "app"
version = "0.1.0"
description = "Tibia Client Editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
prost-build = "0.13"
protoc-bin-vendored = "3"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
sha2 = "0.10"
hex = "0.4"
goblin = "0.9"
thiserror = "2"
toml = "0.8"
prost = "0.13"
lzma-rs = "0.3"
base64 = { version = "0.22", optional = false }
